[gd_scene load_steps=4 format=3 uid="uid://dbyq1awi0oda3"]

[ext_resource type="Script" path="res://debt_popup.gd" id="1_pj16b"]
[ext_resource type="Texture2D" uid="uid://lxj6ys4q2f4j" path="res://assets/sprites and images/all fees - debt ad.png" id="3_37gr1"]
[ext_resource type="Texture2D" uid="uid://bt6nm3fgt1i7a" path="res://assets/sprites and images/place your debt- debt ad.png" id="3_g26lk"]

[node name="debtPopup" type="Node2D"]
script = ExtResource("1_pj16b")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="DebtPopup" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_g26lk")

[node name="Button" type="Button" parent="DebtPopup"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
offset_left = -105.0
offset_top = -81.0
offset_right = 105.0
offset_bottom = 93.0

[node name="AllFees-DebtAd" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_37gr1")

[node name="Button" type="Button" parent="AllFees-DebtAd"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
offset_left = -90.0
offset_top = -80.0
offset_right = 85.0
offset_bottom = 97.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="DebtPopup/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AllFees-DebtAd/Button" to="." method="_on_button_pressed"]
